[gd_scene load_steps=6 format=3 uid="uid://crsso304y6jxn"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_jg4nj"]
[ext_resource type="PackedScene" uid="uid://c6fth4mtmu8c0" path="res://scenes/settings_menu.tscn" id="2_t2cu7"]
[ext_resource type="Theme" uid="uid://dupann3qkyje3" path="res://themes/pixel_98.tres" id="3_3r531"]
[ext_resource type="Texture2D" uid="uid://dk8uafhm1rf0y" path="res://sprites/panels/windows-grey.jpg" id="3_gx2ky"]
[ext_resource type="Texture2D" uid="uid://bdm0xlk4i4ib0" path="res://sprites/panels/windows-white.jpg" id="4_740pk"]

[node name="level_select" type="Node2D"]
script = ExtResource("1_jg4nj")

[node name="SettingsMenu" parent="." instance=ExtResource("2_t2cu7")]
offset_left = 1162.0
offset_top = 101.0
offset_right = 1202.0
offset_bottom = 134.0

[node name="demoButton" type="TextureButton" parent="."]
offset_left = 166.0
offset_top = 55.0
offset_right = 520.0
offset_bottom = 279.0
texture_normal = ExtResource("3_gx2ky")
texture_pressed = ExtResource("4_740pk")
texture_hover = ExtResource("4_740pk")
texture_disabled = ExtResource("4_740pk")
texture_focused = ExtResource("4_740pk")

[node name="demoLabel" type="Label" parent="demoButton"]
layout_mode = 0
offset_left = 53.0
offset_top = 95.0
offset_right = 302.0
offset_bottom = 153.0
theme = ExtResource("3_3r531")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 61
text = "TUTORIAL"

[node name="level0Button" type="TextureButton" parent="."]
offset_left = 168.0
offset_top = 370.0
offset_right = 522.0
offset_bottom = 594.0
texture_normal = ExtResource("3_gx2ky")
texture_pressed = ExtResource("4_740pk")
texture_hover = ExtResource("4_740pk")
texture_disabled = ExtResource("4_740pk")
texture_focused = ExtResource("4_740pk")

[node name="level0Label" type="Label" parent="level0Button"]
layout_mode = 0
offset_left = 75.0
offset_top = 81.0
offset_right = 283.0
offset_bottom = 139.0
theme = ExtResource("3_3r531")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 61
text = "LEVEL 0"

[node name="level1Button" type="TextureButton" parent="."]
offset_left = 446.0
offset_top = 182.0
offset_right = 800.0
offset_bottom = 406.0
texture_normal = ExtResource("3_gx2ky")
texture_pressed = ExtResource("4_740pk")
texture_hover = ExtResource("4_740pk")
texture_disabled = ExtResource("4_740pk")

[node name="level1Label" type="Label" parent="level1Button"]
layout_mode = 0
offset_left = 75.0
offset_top = 81.0
offset_right = 283.0
offset_bottom = 139.0
theme = ExtResource("3_3r531")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 61
text = "LEVEL 1"

[node name="level2Button" type="TextureButton" parent="."]
offset_left = 751.0
offset_top = 30.0
offset_right = 1105.0
offset_bottom = 254.0
texture_normal = ExtResource("3_gx2ky")
texture_pressed = ExtResource("4_740pk")
texture_hover = ExtResource("4_740pk")
texture_disabled = ExtResource("4_740pk")
texture_focused = ExtResource("4_740pk")

[node name="level2Label" type="Label" parent="level2Button"]
layout_mode = 0
offset_left = 75.0
offset_top = 81.0
offset_right = 283.0
offset_bottom = 139.0
theme = ExtResource("3_3r531")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 61
text = "LEVEL 2"

[node name="tspButton" type="TextureButton" parent="."]
offset_left = 703.0
offset_top = 357.0
offset_right = 1057.0
offset_bottom = 581.0
texture_normal = ExtResource("3_gx2ky")
texture_pressed = ExtResource("4_740pk")
texture_hover = ExtResource("4_740pk")
texture_disabled = ExtResource("4_740pk")
texture_focused = ExtResource("4_740pk")

[node name="tspLabel" type="Label" parent="tspButton"]
layout_mode = 0
offset_left = 46.0
offset_top = 94.0
offset_right = 320.0
offset_bottom = 152.0
theme = ExtResource("3_3r531")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 61
text = "TSP LEVEL"

[connection signal="mouse_entered" from="demoButton" to="." method="_on_demo_button_mouse_entered"]
[connection signal="pressed" from="demoButton" to="." method="_on_demo_button_pressed"]
[connection signal="mouse_entered" from="level0Button" to="." method="_on_level_0_button_mouse_entered"]
[connection signal="pressed" from="level0Button" to="." method="_on_level_0_button_pressed"]
[connection signal="mouse_entered" from="level1Button" to="." method="_on_level_1_button_mouse_entered"]
[connection signal="pressed" from="level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="mouse_entered" from="level2Button" to="." method="_on_level_2_button_mouse_entered"]
[connection signal="pressed" from="level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="mouse_entered" from="tspButton" to="." method="_on_tsp_button_mouse_entered"]
[connection signal="pressed" from="tspButton" to="." method="_on_tsp_button_pressed"]
